[gd_scene load_steps=10 format=3 uid="uid://dfm20dycpgf7y"]

[ext_resource type="Script" path="res://scripts/moveShip.gd" id="1_bdwil"]
[ext_resource type="PackedScene" uid="uid://biw0b2ojys48f" path="res://scenes/shipOne.tscn" id="2_rqaq0"]
[ext_resource type="Script" path="res://scripts/dynamicCamera.gd" id="3_vqv25"]
[ext_resource type="Script" path="res://scenes/ViewRayCast.gd" id="4_56cex"]
[ext_resource type="Script" path="res://scenes/spaceDust.gd" id="4_anfqm"]
[ext_resource type="Script" path="res://scenes/Weapons.gd" id="6_o6kr3"]

[sub_resource type="BoxShape3D" id="BoxShape3D_8wen1"]
size = Vector3(5.66, 0.901, 6.976)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_n3mub"]
emission_enabled = true
emission = Color(0.454524, 0.454524, 0.454524, 1)
use_point_size = true
point_size = 1.5

[sub_resource type="PointMesh" id="PointMesh_rs07s"]
material = SubResource("StandardMaterial3D_n3mub")

[node name="Ship" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0271521, 0.0150385, -0.0193691)

[node name="shipBody" type="RigidBody3D" parent="."]
transform = Transform3D(1.00156, -3.82268e-06, 0.00172365, -1.27316e-06, 1.00156, 0.002961, -0.00172366, -0.00296102, 1.00155, 0, 0, 0)
linear_damp = 1.17
angular_damp = 9.475
script = ExtResource("1_bdwil")

[node name="shipCollision" type="CollisionShape3D" parent="shipBody"]
transform = Transform3D(1, -9.09495e-13, 4.65661e-10, 0, 1, -2.32831e-10, -3.49246e-10, -2.32831e-10, 1, 0, 0.221, -1.382)
shape = SubResource("BoxShape3D_8wen1")

[node name="ship" parent="shipBody" instance=ExtResource("2_rqaq0")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.785, -4.49126)

[node name="ThirdPersonCam" type="Camera3D" parent="shipBody"]
transform = Transform3D(0.998441, -2.72848e-12, -3.37604e-09, 0, 0.998438, -3.49246e-09, 0, 2.32831e-10, 0.998447, -1.86265e-09, 2.655, 6.239)
current = true
script = ExtResource("3_vqv25")

[node name="ViewRayCast" type="RayCast3D" parent="shipBody/ThirdPersonCam"]
transform = Transform3D(1, -1.87535e-13, 1.57339e-10, -9.34874e-13, 1, 7.38078e-10, 1.32491e-11, -7.36413e-11, 1, 0, 0, 0)
target_position = Vector3(2.08165e-12, 2.08165e-12, -1000)
script = ExtResource("4_56cex")

[node name="spaceDust" type="CPUParticles3D" parent="shipBody"]
transform = Transform3D(1, -3.18323e-12, 1.74623e-09, -4.54747e-13, 0.999999, -6.98492e-10, -1.16415e-09, -9.31323e-10, 0.999999, 0.0376071, 2.69593, -21.8463)
cast_shadow = 0
emitting = false
amount = 500
mesh = SubResource("PointMesh_rs07s")
emission_shape = 3
emission_box_extents = Vector3(20, 20, 20)
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0, 0)
script = ExtResource("4_anfqm")

[node name="Weapons" type="Node3D" parent="."]
script = ExtResource("6_o6kr3")

[node name="Gun1" type="RayCast3D" parent="Weapons"]
transform = Transform3D(1.00156, -3.82268e-06, 0.00172365, -1.27316e-06, 1.00156, 0.002961, -0.00172366, -0.00296102, 1.00155, 1.45347, -0.155414, -4.30961)
target_position = Vector3(2.08165e-12, 2.08165e-12, -1000)
debug_shape_custom_color = Color(0.780392, 0, 0, 1)

[node name="Gun2" type="RayCast3D" parent="Weapons"]
transform = Transform3D(1.00156, -3.82268e-06, 0.00172365, -1.27316e-06, 1.00156, 0.002961, -0.00172366, -0.00296102, 1.00155, -1.22718, 0.00177962, -4.52374)
target_position = Vector3(2.08165e-12, 2.08165e-12, -1000)
debug_shape_custom_color = Color(0.694118, 0, 0, 1)

[connection signal="hasTarget" from="shipBody/ThirdPersonCam/ViewRayCast" to="Weapons" method="_on_view_ray_cast_has_target"]
[connection signal="tree_entered" from="shipBody/ThirdPersonCam/ViewRayCast" to="Weapons" method="_on_view_ray_cast_tree_entered"]
[connection signal="tree_entered" from="Weapons/Gun1" to="Weapons" method="_on_gun_1_tree_entered"]
[connection signal="tree_entered" from="Weapons/Gun2" to="Weapons" method="_on_gun_2_tree_entered"]
